--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,12 @@ body {
   background-color: #1c1c1c;
   font-family: Lato, helvetica, sans-serif;
   color: #00c9a6;
+  margin: 0 auto;
+  text-align: center;
+  width: 1204px;
 }
+
+
 
 h1 {
 	text-align: center;
@@ -33,7 +38,10 @@ input {
 .mains,
 .songs {
   float: left;
+  border: 1px #5fffe3 solid;
+  margin-top: 100px;
 }
+
 
 .mains {
   width: 800px;
@@ -50,6 +58,7 @@ input {
   text-align: center;
   color: #1c1c1c;
 }
+.sw:hover {font-weight: 700;}
 
 .list {
   width: 300px;
@@ -66,6 +75,7 @@ p {
   margin-top: 215px;
   font-size: 50px;
   margin-bottom: 0;
+  font-weight: 300;
 }
 
 ul {
