made app responsive, made main image smaller

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ h1 {
 form {
 	text-align: center;
 	margin: 0 auto;
-	margin-top: 390px;
+	margin-top: 385px;
 	display: none;
 }
 
@@ -50,7 +50,7 @@ input {
 .mains {
   width: 800px;
   height: 800px;
-  background-image: url('images/play.jpg');
+  background-image: url('images/play2.jpg');
 }
 
 .mains:hover {cursor: pointer;}
@@ -112,14 +112,13 @@ li:hover{cursor: pointer;}
 
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1000px) {
   body {
     width: 100%;
   }
   .mains {
-    max-width: 100%;
+    width: 100%;
     display: block;
- 
     margin: 0 auto;
     background-image: url('images/small.jpg');
     background-repeat: no-repeat;
@@ -130,7 +129,7 @@ li:hover{cursor: pointer;}
   .songs {
     margin: 0 auto;
     background-color: #5fffe3;
-    max-width: 100%;
+    width: 100%;
     float: none;
     max-height: 500px;
 	  }
